# gRPC-Storage

./: .env.example  Cargo.toml  README.md  build.rs  diesel.toml  downloaded_file.txt
migrations/2024-08-07-121345_create_fh_store/: down.sql  up.sql
proto/: store.proto
src/: client.rs  db.rs  grpc.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
usage-example/: cli-client.rs
