[package]
name = "file-hash-service"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
# futures-util = "0.3.30"
# futures = "0.3.30"
prost = "0.13.1"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tonic = "0.12.1"
# async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.12.1"
