[package]
name = "grpc-storage"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-storage"
path = "src/main.rs"

[[bin]]
name = "cli-client"
path = "usage-example/cli-client.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
prost = "0.13.1"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tonic = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"
